tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_9.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
do {
  let bar
    :  (o: { f: (n: { x: Integer }) => Integer }) => Integer
    = props => {
      let { f } = props;
      {x: "hi"}.f()
    }
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_9.kk:6:11
  │
6 │       {x: "hi"}.f()
  │           ^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Integer     | + String    |
    +---------------+-------------+
